# hotwired-mcp

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: postinstall.js  update-version.js
src/: lib.rs  main.rs  server.rs
src/ipc/: client.rs  messages.rs  mock.rs  mod.rs  traits.rs
src/tools/: artifacts.rs  mod.rs  protocol.rs  status.rs  terminal.rs
src/types/: errors.rs
