[package]
name = "hotwired-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hotwired-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "=0.8.5", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
